update for taroco common 最近在做axon框架翻译的事。所以项目进度有一些慢

--- a/taroco-cloud/cloud-config-server/src/main/resources/conf/api-gateway.yml
+++ b/taroco-cloud/cloud-config-server/src/main/resources/conf/api-gateway.yml
@@ -28,7 +28,7 @@ spring:
     queue: gateway.event.stream
     terminal: gateway.axon.terminal
     project:
-      exchange: project.events.fanout.exchange
+      exchange: usercenter.events.fanout.exchange
   rabbitmq:
     hostname: 127.0.0.1
     username: guest
