--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <module>taroco-cloud</module>
         <module>taroco-assembling</module>
         <module>taroco-common</module>
-        <module>taroco-user</module>
+        <module>taroco-user-center</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -23,6 +23,8 @@
         <axon.version>3.0.4</axon.version>
         <spring-cloud.version>Dalston.RELEASE</spring-cloud.version>
         <spring-boot.version>1.5.3.RELEASE</spring-boot.version>
+        <spring.version>4.3.9.RELEASE</spring.version>
+        <springfox.version>2.6.1</springfox.version>
         <lombok.version>1.16.6</lombok.version>
         <commons-lang.version>3.4</commons-lang.version>
         <commons-codec.version>1.6.0</commons-codec.version>
@@ -32,14 +34,23 @@
         <ehcache.version>2.8.3</ehcache.version>
         <hibernate.javax.version>1.0.0.Final</hibernate.javax.version>
         <jackson.version>1.9.5</jackson.version>
-
     </properties>
 
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>xyz.weechang</groupId>
-                <artifactId>taroco-common</artifactId>
+                <artifactId>taroco-base</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>xyz.weechang</groupId>
+                <artifactId>taroco-core</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>xyz.weechang</groupId>
+                <artifactId>taroco-service</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -68,6 +79,23 @@
                 <type>pom</type>
             </dependency>
 
+            <!--swagger -->
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger2</artifactId>
+                <version>${springfox.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger-ui</artifactId>
+                <version>${springfox.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-data-rest</artifactId>
+                <version>${springfox.version}</version>
+            </dependency>
+
             <!-- commons -->
             <dependency>
                 <groupId>org.apache.commons</groupId>
@@ -93,8 +121,40 @@
             </dependency>
             <dependency>
                 <groupId>org.axonframework</groupId>
+                <artifactId>axon-spring</artifactId>
+                <version>${axon.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.axonframework</groupId>
+                <artifactId>axon-core</artifactId>
+                <version>${axon.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.axonframework</groupId>
                 <artifactId>axon-amqp</artifactId>
                 <version>${axon.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.axonframework</groupId>
+                <artifactId>axon-mongo</artifactId>
+                <version>${axon.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.axonframework</groupId>
+                <artifactId>axon-test</artifactId>
+                <version>${axon.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>com.thoughtworks.xstream</groupId>
+                <artifactId>xstream</artifactId>
+                <version>1.4.9</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-lang</groupId>
+                <artifactId>commons-lang</artifactId>
+                <version>2.6</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
