--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
             </dependency>
             <dependency>
                 <groupId>xyz.weechang</groupId>
+                <artifactId>taroco-common</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>xyz.weechang</groupId>
                 <artifactId>taroco-core</artifactId>
                 <version>${project.version}</version>
             </dependency>
