--- a/taroco-cloud/cloud-config-server/src/main/resources/conf/uc-query.yml
+++ b/taroco-cloud/cloud-config-server/src/main/resources/conf/uc-query.yml
@@ -26,7 +26,7 @@ spring:
 
   data:
     mongodb:
-      uri: ${vcap.services.mongo.credentials.uri:mongodb://127.0.0.1:27017}/projects
+      uri: ${vcap.services.mongo.credentials.uri:mongodb://127.0.0.1:27017}/taroco
     rest:
       uri: api
 
