--- a/taroco-cloud/cloud-api-gateway/pom.xml
+++ b/taroco-cloud/cloud-api-gateway/pom.xml
@@ -106,4 +106,13 @@
             <artifactId>spring-cloud-starter-zuul</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
