--- a/taroco-cloud/cloud-config-server/pom.xml
+++ b/taroco-cloud/cloud-config-server/pom.xml
@@ -11,7 +11,6 @@
 
     <artifactId>cloud-config-server</artifactId>
 
-
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -22,5 +21,14 @@
             <artifactId>spring-cloud-config-server</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
