--- a/taroco-user-center/uc-auth/pom.xml
+++ b/taroco-user-center/uc-auth/pom.xml
@@ -22,7 +22,6 @@
             <groupId>xyz.weechang</groupId>
             <artifactId>taroco-core</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.axonframework</groupId>
             <artifactId>axon-spring-boot-starter</artifactId>
@@ -116,5 +115,14 @@
             <version>1.4.9</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
