--- a/taroco-user-center/pom.xml
+++ b/taroco-user-center/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>taroco-user</artifactId>
+    <artifactId>taroco-user-center</artifactId>
     <packaging>pom</packaging>
     <modules>
         <module>uc-command</module>
