--- a/taroco-user-center/uc-command-service/pom.xml
+++ b/taroco-user-center/uc-command-service/pom.xml
@@ -3,33 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>taroco-user</artifactId>
+        <artifactId>taroco-user-center</artifactId>
         <groupId>xyz.weechang</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>uc-query</artifactId>
+    <artifactId>uc-command-service</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>xyz.weechang</groupId>
-            <artifactId>uc-common</artifactId>
+            <artifactId>uc-command</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <dependency>
-            <groupId>xyz.weechang</groupId>
-            <artifactId>taroco-service</artifactId>
-        </dependency>
-
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 </project>
