--- a/taroco-cloud/cloud-config-server/src/main/resources/bootstrap.yml
+++ b/taroco-cloud/cloud-config-server/src/main/resources/bootstrap.yml
@@ -32,7 +32,7 @@ spring:
     config:
       server:
         native:
-          search-locations: classpath:/conf
+          search-locations: classpath:/conf,/weechang/apps/config-repo
 
 server:
   port: ${PORT:8888}
