--- a/taroco-message-center/message-center-websocket/pom.xml
+++ b/taroco-message-center/message-center-websocket/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>mc-websocket</artifactId>
+    <artifactId>message-center-websocket</artifactId>
 
 
 </project>
