--- a/taroco-user-center/user-center-auth/pom.xml
+++ b/taroco-user-center/user-center-auth/pom.xml
@@ -9,12 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>uc-auth</artifactId>
+    <artifactId>user-center-auth</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>xyz.weechang</groupId>
-            <artifactId>uc-common</artifactId>
+            <artifactId>user-center-common</artifactId>
             <version>${project.version}</version>
         </dependency>
 
