--- a/taroco-cloud/cloud-config-server/src/main/resources/conf/uc-query.yml
+++ b/taroco-cloud/cloud-config-server/src/main/resources/conf/uc-query.yml
@@ -3,6 +3,10 @@ info:
     name: User Center Query
     description:  User Center Query Side (CQRS)
 
+management:
+  security:
+    enabled: false
+
 server:
   port: ${PORT:8083}
     
@@ -14,7 +18,6 @@ logging:
     xyz.weechang: DEBUG
 
 spring:
-  profiles: dev
   application:
     exchange: usercenter.events.fanout.exchange
     queue: usercenter.view.event.stream
@@ -45,7 +48,42 @@ eureka:
     serviceUrl:
       defaultZone: ${vcap.services.registry.credentials.uri:http://localhost:8761}/eureka/
 
+# The OAuth2 server definition that would be used to send the authorization requests to
 authserver:
   hostname: localhost
   port: 9999
   contextPath: uaa
+
+---
+spring:
+  profiles: dev
+  jpa:
+    database: MySQL
+    show-sql: true
+    hibernate:
+      naming-strategy: org.hibernate.cfg.ImprovedNamingStrategy
+      ddl-auto: create
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5Dialect
+
+  datasource:
+  url: jdbc:mysql://127.0.0.1:3306/taroco?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+  username: taroco
+  password: taroco
+  driver-class-name: com.mysql.jdbc.Driver
+  max-active: 20
+  max-idle: 8
+  min-idle: 8
+  initial-size: 10
+
+
+authserver:
+  hostname: localhost
+  port: 80
+  contextPath: uaa
+
+eureka:
+  instance:
+    hostname: localhost
+    nonSecurePort: 80
