--- a/taroco-user-center/user-center-query/pom.xml
+++ b/taroco-user-center/user-center-query/pom.xml
@@ -21,7 +21,10 @@
             <groupId>xyz.weechang</groupId>
             <artifactId>taroco-service</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-rest</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
