--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <modules>
         <module>moreco-base</module>
-        <module>moreco-cloud</module>
+        <module>moreco-starter</module>
         <module>moreco-sys</module>
     </modules>
     <packaging>pom</packaging>
