--- a/moreco-demo/moreco-spring-boot-demo/src/main/resources/application.yml
+++ b/moreco-demo/moreco-spring-boot-demo/src/main/resources/application.yml
@@ -18,4 +18,4 @@ logging:
   level: debug
   level.io.github.weechang.moreco: debug
   path: logs/
-  file: spring-boot-demo.log
+  file: bootDemo.log
