--- a/moreco-demo/moreco-spring-boot-demo/pom.xml
+++ b/moreco-demo/moreco-spring-boot-demo/pom.xml
@@ -14,6 +14,10 @@
     <dependencies>
         <dependency>
             <groupId>io.github.weechang</groupId>
+            <artifactId>moreco-rbac</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.github.weechang</groupId>
             <artifactId>moreco-spring-boot-starter</artifactId>
         </dependency>
     </dependencies>
