--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,10 @@
         <commons-codec.version>1.4</commons-codec.version>
         <commons.lang.version>2.6</commons.lang.version>
         <shiro.version>1.4.0</shiro.version>
+
+        <mysql.version>8.0.11</mysql.version>
+        <mssql.version>4.0</mssql.version>
+        <oracle.version>11.2.0.3</oracle.version>
     </properties>
 
     <dependencyManagement>
@@ -50,6 +54,11 @@
             <dependency>
                 <groupId>io.github.weechang</groupId>
                 <artifactId>moreco-spring-boot-starter</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.github.weechang</groupId>
+                <artifactId>moreco-rbac</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -69,6 +78,26 @@
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
+
+            <!-- mysql驱动 -->
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.version}</version>
+            </dependency>
+            <!-- oracle驱动 -->
+            <dependency>
+                <groupId>com.oracle</groupId>
+                <artifactId>ojdbc6</artifactId>
+                <version>${oracle.version}</version>
+            </dependency>
+            <!-- mssql驱动 -->
+            <dependency>
+                <groupId>com.microsoft.sqlserver</groupId>
+                <artifactId>sqljdbc4</artifactId>
+                <version>${mssql.version}</version>
+            </dependency>b
+
             <!--swagger -->
             <dependency>
                 <groupId>io.springfox</groupId>
