--- a/moreco-demo/moreco-spring-boot-demo/src/main/resources/application.yml
+++ b/moreco-demo/moreco-spring-boot-demo/src/main/resources/application.yml
@@ -13,6 +13,25 @@ spring:
       max-file-size: 100MB
       max-request-size: 100MB
       enabled: true
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/moreco?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    username: moreco
+    password: moreco
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    max-active: 20
+    max-idle: 8
+    min-idle: 8
+    initial-size: 10
+  jpa:
+    database: MYSQL
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+      naming:
+        physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
 
 logging:
   level: debug
