--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
                 <groupId>com.microsoft.sqlserver</groupId>
                 <artifactId>sqljdbc4</artifactId>
                 <version>${mssql.version}</version>
-            </dependency>b
+            </dependency>
 
             <!--swagger -->
             <dependency>
