--- a/pom.xml
+++ b/pom.xml
@@ -33,14 +33,14 @@
 
         <spring-boot.version>1.5.9.RELEASE</spring-boot.version>
         <spring-data-releasetrain.version>Ingalls-SR3</spring-data-releasetrain.version>
-        <springfox.version>2.8.0</springfox.version>
-        <commons-codec.version>1.4</commons-codec.version>
-        <commons.lang.version>2.6</commons.lang.version>
-        <shiro.version>1.4.0</shiro.version>
-
         <mysql.version>8.0.11</mysql.version>
         <mssql.version>4.0</mssql.version>
         <oracle.version>11.2.0.3</oracle.version>
+        <springfox.version>2.8.0</springfox.version>
+        <commons-codec.version>1.4</commons-codec.version>
+        <commons.lang.version>2.6</commons.lang.version>
+        <jutil.version>1.0.0-SNAPSHOT</jutil.version>
+        <shiro.version>1.4.0</shiro.version>
     </properties>
 
     <dependencyManagement>
@@ -142,6 +142,11 @@
                 <groupId>commons-lang</groupId>
                 <artifactId>commons-lang</artifactId>
                 <version>${commons.lang.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.github.weechang</groupId>
+                <artifactId>jutil-common-util</artifactId>
+                <version>${jutil.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
