--- a/moreco-demo/moreco-spring-boot-demo/pom.xml
+++ b/moreco-demo/moreco-spring-boot-demo/pom.xml
@@ -22,6 +22,11 @@
         </dependency>
         <dependency>
             <groupId>io.github.weechang</groupId>
+            <artifactId>moreco-monitor-manager</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.weechang</groupId>
             <artifactId>moreco-rbac</artifactId>
         </dependency>
         <dependency>
