--- a/moreco-monitor/moreco-monitor-core/pom.xml
+++ b/moreco-monitor/moreco-monitor-core/pom.xml
@@ -11,5 +11,16 @@
 
     <artifactId>moreco-monitor-core</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 </project>
