--- a/moreco-demo/moreco-spring-boot-demo/pom.xml
+++ b/moreco-demo/moreco-spring-boot-demo/pom.xml
@@ -24,10 +24,10 @@
             <groupId>io.github.weechang</groupId>
             <artifactId>moreco-spring-boot-starter</artifactId>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>io.github.weechang</groupId>-->
-            <!--<artifactId>moreco-security-shiro</artifactId>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>io.github.weechang</groupId>
+            <artifactId>moreco-security</artifactId>
+        </dependency>
     </dependencies>
 
     <!-- Maven控制Spring Profile -->
