--- a/moreco-cloud/moreco-cloud-config/pom.xml
+++ b/moreco-cloud/moreco-cloud-config/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>moreco-cloud-config</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-server</artifactId>
+            <version>1.3.0.RELEASE</version>
+        </dependency>
+    </dependencies>
 
 </project>
