完成功能重组

--- a/moreco-demo/moreco-spring-boot-demo/pom.xml
+++ b/moreco-demo/moreco-spring-boot-demo/pom.xml
@@ -35,11 +35,11 @@
             <artifactId>moreco-component-rbac</artifactId>
             <version>${parent.version}</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>xyz.weechang.moreco</groupId>-->
-            <!--<artifactId>moreco-security</artifactId>-->
-            <!--<version>${parent.version}</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>xyz.weechang.moreco</groupId>
+            <artifactId>moreco-security</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>mysql</groupId>
