--- a/moreco-cloud/moreco-cloud-config/pom.xml
+++ b/moreco-cloud/moreco-cloud-config/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>moreco-cloud</artifactId>
-        <groupId>io.github.weechang</groupId>
+        <groupId>xyz.weechang</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -12,10 +12,6 @@
     <artifactId>moreco-cloud-config</artifactId>
 
     <dependencies>
-        <dependency>
-            <groupId>io.github.weechang</groupId>
-            <artifactId>moreco-base</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-config-server</artifactId>
