--- a/moreco-cloud/moreco-cloud-gateway/pom.xml
+++ b/moreco-cloud/moreco-cloud-gateway/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>moreco-cloud</artifactId>
-        <groupId>io.github.weechang</groupId>
+        <groupId>xyz.weechang</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -12,14 +12,27 @@
     <artifactId>moreco-cloud-gateway</artifactId>
 
     <dependencies>
+        <!--self-->
+        <dependency>
+            <groupId>xyz.weechang</groupId>
+            <artifactId>moreco-security</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>xyz.weechang</groupId>
+            <artifactId>moreco-data-redis</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
+        <!--zuul-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
         </dependency>
-        <!-- spring-cloud 限流 -->
+        <!-- spring-storage 限流 -->
         <dependency>
             <groupId>com.marcosbarbero.cloud</groupId>
             <artifactId>spring-cloud-zuul-ratelimit</artifactId>
+            <version>1.5.0.RELEASE</version>
         </dependency>
         <!--feign-->
         <dependency>
