--- a/moreco-monitor/pom.xml
+++ b/moreco-monitor/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>moreco</artifactId>
-        <groupId>io.github.weechang</groupId>
+        <groupId>xyz.weechang</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -22,7 +22,7 @@
         <dependencies>
             <!--self-->
             <dependency>
-                <groupId>io.github.weechang</groupId>
+                <groupId>xyz.weechang</groupId>
                 <artifactId>moreco-monitor-core</artifactId>
                 <version>${project.parent.version}</version>
             </dependency>
