--- a/moreco-security/pom.xml
+++ b/moreco-security/pom.xml
@@ -38,7 +38,7 @@
         <!--<dependency>-->
             <!--<groupId>xyz.weechang.moreco</groupId>-->
             <!--<artifactId>moreco-component-rbac</artifactId>-->
-            <!--<version>${parent.version}</version>-->
+            <!--<version>${project.parent.version}</version>-->
         <!--</dependency>-->
         <!--spring-->
         <dependency>
