实现前端动态菜单

--- a/moreco-demo/moreco-spring-boot-demo/pom.xml
+++ b/moreco-demo/moreco-spring-boot-demo/pom.xml
@@ -46,32 +46,17 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.11</version>
         </dependency>
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-        </dependency>
     </dependencies>
 
     <!-- Maven控制Spring Profile -->
     <profiles>
-        <!-- Mysql环境 -->
         <profile>
-            <id>dev-mysql</id>
+            <id>dev</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
                 <profileActive>mysql</profileActive>
-            </properties>
-        </profile>
-        <!-- PG环境 -->
-        <profile>
-            <id>dev-pg</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <properties>
-                <profileActive>pg</profileActive>
             </properties>
         </profile>
     </profiles>
